# AutoChairStore

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
_client/: CMakeLists.txt
_client/src/: CMakeLists.txt  main.cpp
_client/src/Network/: NetworkManager.cpp  NetworkManager.hpp
_common/: CMakeLists.txt
_common/src/: Repositories.hpp  StructureSerializer.cpp  StructureSerializer.hpp
_server/: CMakeLists.txt
_server/src/: CMakeLists.txt  main.cpp
_server/src/Database/: DatabaseManager.cpp  DatabaseManager.hpp  DatabaseQueries.hpp  ITable.hpp  ITableFactory.cpp  PhotosTable.hpp  ProductsTable.hpp  PurchaseOrdersTable.cpp  SuppliersTable.cpp  SuppliersTable.hpp  UserTable.hpp
_server/src/Network/: NetworkManager.cpp  NetworkManager.hpp
apps/client/: CMakeLists.txt
apps/client/resources/: resources.qrc
apps/client/src/: main.cpp
apps/client/src/Network/: ApiManager.cpp  ApiManager.hpp  EmailSender.cpp  EmailSender.hpp  NetworkManager.cpp  NetworkManager.hpp
apps/client/src/Ui/: MainWindow.cpp  MainWindow.hpp  Menu.cpp  Menu.hpp  MessageBox.cpp  MessageBox.hpp  TEST_UTILS.hpp  TimerButton.cpp  TimerButton.hpp
apps/client/src/Ui/DisplayData/: DisplayData.hpp
apps/client/src/Ui/Factory/: IFactory.hpp  IModelFactory.hpp  IViewFactory.hpp  IViewModelFactory.hpp  ModelFactory.cpp  ModelFactory.hpp  ViewFactory.cpp  ViewFactory.hpp  ViewModelFactory.cpp  ViewModelFactory.hpp
apps/client/src/Ui/Models/: IModel.cpp  IModel.hpp  InventoryModel.cpp  InventoryModel.hpp  PhotosModel.cpp  PhotosModel.hpp  ProductInfoModel.cpp  ProductInfoModel.hpp  ProductsModel.cpp  ProductsModel.hpp  PurchaseOrdersModel.cpp  PurchaseOrdersModel.hpp  SuppliersModel.cpp  SuppliersModel.hpp  UsersModel.cpp  UsersModel.hpp
apps/client/src/Ui/ViewModels/: AccountViewModel.cpp  AccountViewModel.hpp  BasketViewModel.cpp  BasketViewModel.hpp  CatalogueViewModel.cpp  CatalogueViewModel.hpp  IViewModel.cpp  IViewModel.hpp  LoginRegistrationViewModel.cpp  LoginRegistrationViewModel.hpp  ProductPageViewModel.cpp  ProductPageViewModel.hpp  PurchaseOrderInfoVM.cpp  PurchaseOrderInfoVM.hpp
apps/client/src/Ui/Views/: AccountView.cpp  AccountView.hpp  BasketView.cpp  BasketView.hpp  CatalogueView.cpp  CatalogueView.hpp  IView.cpp  IView.hpp  LoginRegistrationView.cpp  LoginRegistrationView.hpp  ProductPageView.cpp  ProductPageView.hpp  PurchaseOrderInfoV.cpp  PurchaseOrderInfoV.hpp
apps/client/src/Ui/Views/SubViews/: BaseSeatPage.cpp  BaseSeatPage.hpp  CatalogueMenuSV.cpp  CatalogueMenuSV.hpp  CatalogueProductSV.cpp  CatalogueProductSV.hpp  CatalogueSearchBaseSeatV.cpp  CatalogueSearchBaseSeatV.hpp  CatalogueSearchChildSeatV.cpp  CatalogueSearchChildSeatV.hpp  CatalogueSearchLuxurySeatV.cpp  CatalogueSearchLuxurySeatV.hpp  CatalogueSearchSV.cpp  CatalogueSearchSV.hpp  CatalogueSearchSportSeatV.cpp  CatalogueSearchSportSeatV.hpp  ChildSeatPage.cpp  ChildSeatPage.hpp  LuxurySeatPage.cpp  LuxurySeatPage.hpp  SportSeatPage.cpp  SportSeatPage.hpp
apps/server/: CMakeLists.txt
apps/server/src/: main.cpp
apps/server/src/Database/: BaseSeatTable.cpp  BaseSeatTable.hpp  ChildSeatTable.cpp  ChildSeatTable.hpp  DatabaseManager.cpp  DatabaseManager.hpp  DatabaseQueries.cpp  DatabaseQueries.hpp  ITable.hpp  ITableFactory.hpp  InventoryTable.cpp  InventoryTable.hpp  LuxurySeatTable.cpp  LuxurySeatTable.hpp  PhotosTable.cpp  PhotosTable.hpp  ProductInfoTable.cpp  ProductInfoTable.hpp  ProductsTable.cpp  ProductsTable.hpp  PurchaseOrdersTable.cpp  PurchaseOrdersTable.hpp  SportSeatTable.cpp  SportSeatTable.hpp  TEST_PHOTOS.hpp  TableFactory.cpp  TableFactory.hpp  Tests.cpp  Tests.hpp  UserTable.cpp  UsersTable.cpp  UsersTable.hpp  VerificationTable.cpp  VerificationTable.hpp
apps/server/src/Network/: EmailSender.cpp  EmailSender.hpp  NetworkManager.cpp  NetworkManager.hpp
apps/utilit/: CMakeLists.txt  main.cpp
libs/common/: CMakeLists.txt
libs/common/include/: Repositories.hpp  StructureSerializer.hpp
libs/common/src/: StructureSerializer.cpp
